# scripts

./: .gitignore  LICENSE.txt  README.md  package-lock.json  package.json  pyproject.toml
src/: backup_utils.py  file_tools.py  path_management.py  powerful_ls.py  repo_check.py  test.py
