[project]
name = "sinjhin"
version = "0.1.0"
description = "Personal utility scripts collection"
authors = [
    {name = "Sinjhin (John Gardner)",email = "john@ardea.io"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
]

[tool.poetry]
packages = [
    { include = "src" }
]

[tool.poe.tasks]
test = 'python -m src.test'
ls = 'python -m src.powerful_ls'
noncommital = 'python -m src.repo_check'
path = 'python -m src.path_management'
tree = "python -m src.file_tools --tree"
deep-tree = "python -m src.file_tools --tree --depth 4"
find-junk = "python -m src.file_tools --find-ignored"
clean-junk = "python -m src.file_tools --delete-ignored"
uncommitted = "python -m src.file_tools --find-uncommitted"
commit-all = "python -m src.file_tools --commit-all"
nuke = { sequence = ["commit-all", "clean-junk"] }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"